# CashCrow

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compile.sh  crypto.cpp  crypto.hpp  dfasfsff  host.crt  host.key  main.cpp  rand.cpp  rand.hpp
db/: db.hpp  db_debug.cpp  init.sql  main.cpp  spec_drop.sql  spec_prepare.sql  spec_table.sql  start.sql
html/: change_password.html  change_password_failure.html  change_password_success.html  chart.html  error.html  header.html  index.html  login.html  login_failure.html  loginfailure.html  notification.html  portfolio.html  profile.html  register.html  register_failure.html  register_success.html  trade_company.html  trading.html
html/css/: error.css  index.css  login.css
html/js/: hover.js
price/: compile.sh  cron-jobs  price_gen_daily.sh  price_gen_minutely.sh  price_history_all.cpp  price_history_now.cpp
price/csv/: cookedA.csv  cookedB.csv  cookedC.csv  nowA.csv  nowB.csv  nowC.csv  rawA.csv  rawB.csv  rawC.csv
static/components/: liveclock.html
static/css/: index.css  register.css
static/js/: account-management.js  credentials.js  hover.js  register.js  statChart1.js
